Fix Banner & Add Custom ScrollBar & Add Footer

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+/* Code for scrolbar animation */
+
+@media (min-width: 500px){
+	::-webkit-scrollbar{
+		width: 5px;
+		background-color: transparent;
+	}
+	
+	::-webkit-scrollbar-thumb{
+		background-color: red;
+	}
+	
+	::-webkit-scrollbar-thumb:hover{
+		background-color: #bb0a0a;
+		cursor: pointer;
+	}
+}
